# wm

./: .env.template  .gitignore  Dockerfile.base  README.md  docker-compose.yml  install.sh  pyproject.toml
api1/: Dockerfile.api1  __init__.py  app.py  config.py  constants.py  entrypoint.sh  helpers.py  pdf.py  pyproject.toml  pytest.ini  smtp_logging.py  storage.py
api1/admins/: model.py  provider.py  schemas.py  view.py
api1/api_v2/: api.py  utils.py
api1/tests/: conftest.py  mock_AdminDBs_admin.json
api1/tests/unit_tests/test_user/: test_api.py
api1/users/: model.py  model_DB2.py  view.py  view_DB2.py
api_admin/: Dockerfile.api_admin  __init__.py  alembic.ini  app_admin.py  config.py  database.py  pyproject.toml  storage.py
api_admin/admins/: __init__.py  model.py  provider.py  schemas.py  view.py
api_admin/alembic/: env.py
api_admin/alembic/versions/: 2023-07-24_db_create.py  2025-05-19_create_account_sync_settings_table.py  2025-06-06_add_default_home_page.py
api_admin/starlette_admin/: __init__.py  actions.py  auth.py  base.py  fields.py  helpers.py  i18n.py  views.py
api_admin/starlette_admin/contrib/mongoengine/: view.py
api_admin/starlette_admin/contrib/odmantic/: view.py
api_admin/starlette_admin/contrib/sqla/: __init__.py  admin.py  converters.py  view.py
api_admin/starlette_admin/contrib/sqla/ext/: pydantic.py
api_admin/starlette_admin/statics/js/: list.js
api_admin/starlette_admin/templates/: detail.html  edit.html  layout.html  list.html
api_admin/users/: model.py  schemas.py  view.py
config/: active_time_range.json
init-db/: init.sql
nginx/: Dockerfile_nginx.dev  nginx.conf
starlette_admin/: __init__.py  auth.py  base.py  converters.py  exceptions.py  fields.py  helpers.py  i18n.py  views.py
starlette_admin/templates/: base.html  checkinvertory.html  create.html  detail.html  (+22 more)
(+87 files in other folders)
